# idx_binary

./: Cargo.toml
src/: compare.rs  lib.rs
