[package]
name = "idx_binary"
version = "0.36.1"
edition = "2021"

authors = ["Oden Shirataki <oden.srtk@gmail.com>"]

description = "Indexed binary file. It uses mmap , various_data_file and avltiree."

repository = "https://github.com/OdenShirataki/idx_binary"

keywords = ["index", "file", "avltree", "memmap", "database"]
categories = ["algorithms", "caching", "filesystem"]
license = "MIT/Apache-2.0"

[dependencies]
futures = "0.3.29"
various_data_file = { version = "0.17.0" }
idx_file = { version = "0.58.0" }
